--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {%extends "base.html"%}
 
 {%block header%}
-<title> SymboESFM |  Ingresar Ecuación</title>
+<title> SymboESFM </title>
 {%endblock%}
 
 {%block content%}
