--- a/templates/simple.html
+++ b/templates/simple.html
@@ -9,6 +9,7 @@
     <script>
         var MQ = MathQuill.getInterface(2);
     </script>
+    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
 {%endblock%}
 
 {%block content%}
