--- a/templates/creditos.html
+++ b/templates/creditos.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 
 {%block header%}
-    <title> SymboESFM |  Créditos</title>
+    <title> ESFMlab |  Créditos</title>
 {%endblock%}
 
 {%block content%}
