--- a/templates/integracion/doble.html
+++ b/templates/integracion/doble.html
@@ -2,7 +2,7 @@
 {%extends "base.html"%}
 
 {%block header%}
-    <title> SymboESFM |  Ingresar Ecuación</title>
+    <title> ESFMlab |  Ingresar Ecuación</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.css">`
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.js" type="text/javascript"></script>
@@ -34,7 +34,15 @@
                                                 padding: .5rem 1rem;
                                                 font-size: 1.25rem;
                                                 border-radius: .3rem; line-height: inherit;"></span>
-                <input type="hidden" id= "latexvalue" value = "" style = "width:100%;" id = "math-field" class="form-control-lg" id="exampleFormControlInput1" placeholder="Ecuación con operadores de Python" name = "eq">
+                <input type="hidden" id= "latexvalue" value = "" style = "width:100%;" class="form-control-lg" placeholder="Ecuación con operadores de Python" name = "eq">
+            </div>
+            <div style = "width:100%;">
+
+                <span id="math-fielda" style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
+                                                padding: .5rem 1rem;
+                                                font-size: 1.25rem;
+                                                border-radius: .3rem; line-height: inherit;">x = </span>
+                <input type="hidden" id= "latexvaluea" value = "" style = "width:100%;" class="form-control-lg"  placeholder="Ecuación con operadores de Python" name = "a'">
             </div>
             <div class="container" style = "margin-top:30px;">
                 <div class="row justify-content-center">
@@ -43,7 +51,9 @@
                         <div class = "container">
                             <div class="row justify-content-center">
                                 <div class="col">
-                                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="a" name = "a" required>
+
+                                    
+                                    <!-- <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="a" name = "a" required> -->
                                 </div>
                                 <div class="col">
                                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="b" name = "b" required>
@@ -90,6 +100,20 @@
             handlers: {
                 edit: function() { // useful event handlers
                 inputSpan.value =  mathField.latex(); 
+                }
+            }
+            });
+        </script>
+        <script>
+            var mathFieldSpana = document.getElementById('math-fielda');
+            var inputSpana = document.getElementById('latexvaluea');
+    
+            var MQQ = MathQuill.getInterface(2); // for backcompat
+            var mathFielda = MQQ.MathField(mathFieldSpan, {
+            spaceBehavesLikeTab: true, // configurable
+            handlers: {
+                edit: function() { // useful event handlers
+                inputSpana.value =  mathFielda.latex(); 
                 }
             }
             });
