--- a/templates/integracion/doble.html
+++ b/templates/integracion/doble.html
@@ -1,6 +1,5 @@
-
 {%extends "base.html"%}
-
+{%load static%}
 {%block header%}
     <title> ESFMlab |  Ingresar Ecuación</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.css">`
@@ -9,6 +8,7 @@
     <script>
         var MQ = MathQuill.getInterface(2);
     </script>
+    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
 {%endblock%}
 
 {%block content%}
@@ -24,6 +24,8 @@
             <img src="https://fotos.subefotos.com/9daf306be0950696714ea8b9e2ac3104o.png" alt="" style = "width:200px;">
             <br>
             Si quieres cambiar el orden de integración, invierte las literales en tu función.
+            <br>
+            Si  a y b son funciones, introdúcelas con <a href="https://entrenamiento-python-basico.readthedocs.io/es/latest/leccion3/operadores_aritmeticos.html" target = "_blank">operadores de Python</a>.
         </div>
         <form action="{%url "submit"%}" method = "POST">
             {%csrf_token%}
@@ -36,14 +38,7 @@
                                                 border-radius: .3rem; line-height: inherit;"></span>
                 <input type="hidden" id= "latexvalue" value = "" style = "width:100%;" class="form-control-lg" placeholder="Ecuación con operadores de Python" name = "eq">
             </div>
-            <div style = "width:100%;">
-
-                <span id="math-fielda" style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
-                                                padding: .5rem 1rem;
-                                                font-size: 1.25rem;
-                                                border-radius: .3rem; line-height: inherit;">x = </span>
-                <input type="hidden" id= "latexvaluea" value = "" style = "width:100%;" class="form-control-lg"  placeholder="Ecuación con operadores de Python" name = "a'">
-            </div>
+            
             <div class="container" style = "margin-top:30px;">
                 <div class="row justify-content-center">
                     <div class="col-auto" style = "padding:20px;">
@@ -53,7 +48,7 @@
                                 <div class="col">
 
                                     
-                                    <!-- <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="a" name = "a" required> -->
+                                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="a" name = "a" required> 
                                 </div>
                                 <div class="col">
                                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="b" name = "b" required>
