--- a/templates/construccion.html
+++ b/templates/construccion.html
@@ -7,4 +7,8 @@
 
 {%block content%}
 
+<img src="https://fotos.subefotos.com/8235823138e3988126216e5b35c89ac6o.png" style = "display: block;
+                                                                                    margin-left: auto;
+                                                                                    margin-right: auto;
+                                                                                    width: 60%;" alt="">
 {%endblock%}
