--- a/templates/integracion/view.html
+++ b/templates/integracion/view.html
@@ -23,8 +23,10 @@
         {%endif%}
     </div>    
     <div>
-        {%if request.session.particiones == 1%}
+        {%if request.session.particiones == 1  %}
             <p style = "font-size:large;">La aproximación con el método simple de <b>{{metodo}}</b> es de: </p>
+        {%elif tipo == "romberg"%}
+        <p style = "font-size:large;">La aproximación con el método de <b>{{metodo}}</b> y <b> \( O(h^{{request.session.particiones}}) \)</b> es de: </p>
         {%else%}
             <p style = "font-size:large;">La aproximación con el método compuesto de <b>{{metodo}}</b> con <b>{{request.session.particiones}}</b> particiones es de: </p>
         {%endif%}
@@ -36,33 +38,122 @@
         
             <a class="btn btn-primary"  style = "width:100%;" href = "{%url "simple"%}" >Ingresar otra</a>
         
-        {%else%}
+        {%elif  "doble" in tipo%}
             <a class="btn btn-primary"  style = "width:100%;" href = "{%url "doble"%}" >Ingresar otra</a>
+        {%elif tipo == "romberg"%}
+            <a class="btn btn-primary"  style = "width:100%;" href = "{%url "extrapolacion"%}" >Ingresar otra</a>
         {%endif%}
     </div>
-    <div style = "padding-top:30px;">
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Errores
-                </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Pronto podrás ver la tabla con los diferentes errores</div>
-            </div>
-            </div>
-            <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Pasos
-                </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Pronto podrás ver los pasos detallados</div>
-            </div>
+
+    <ul class="nav nav-tabs" id="myTab" role="tablist" style =  "padding-top:30px;">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Errores</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Pasos</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Fórmula</button>
+        </li>
+      </ul>
+    <div class="tab-content" id="myTabContent" style = "padding:20px; padding-bottom:100px;">
+        <!-- Errores -->
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Valor Numérico</th>
+                    </tr>
+                </thead>
+                <tbody> 
+                    {%for error in errores%}
+                        <tr>
+                        
+                            {%if error.Valor or error.Valor == 0%}
+                                <th>{{error.Error}}</th>
+                                <td>  {{error.Valor}}</td>
+                            {%endif%}
+                        
+                        </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Pasos -->
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" style = "font-size:1.5rem;">
+            <div style = "padding:10px;">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+
+                    {%for paso in pasos%}
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-heading{{forloop.counter}}">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{forloop.counter}}" aria-expanded="false" aria-controls="flush-collapse{{forloop.counter}}">
+                                {{paso.titulo}}
+                                </button>
+                            </h2>
+                            <div id="flush-collapse{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading{{forloop.counter}}" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">
+                                    {%if paso.procedimiento2 %}
+                                                <div class="accordion accordion-flush" id="accordionFlush2Example">
+                                                    {%for paso2 in paso.procedimiento2%}
+                                                        <div class="accordion-item">
+                                                            <h2 class="accordion-header" id="flush-heading2{{forloop.counter}}">
+                                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse2{{forloop.counter}}" aria-expanded="false" aria-controls="flush-collapse2{{forloop.counter}}">
+                                                                {{paso2.titulo}}
+                                                                </button>
+                                                            </h2>
+                                                            <div id="flush-collapse2{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading2{{forloop.counter}}" data-bs-parent="#accordionFlushExample2">
+                                                                <div class="accordion-body">
+                                                                    <div class="accordion accordion-flush" id="accordionFlush3Example">
+                                                                        {%for paso3 in paso2.procedimiento%}
+                                                                            <div class="accordion-item">
+                                                                                <h2 class="accordion-header" id="flush-heading3{{forloop.counter}}">
+                                                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse3{{forloop.counter}}" aria-expanded="false" aria-controls="flush-collapse3{{forloop.counter}}">
+                                                                                    {{paso3.titulo}}
+                                                                                    </button>
+                                                                                </h2>
+                                                                                <div id="flush-collapse3{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading3{{forloop.counter}}" data-bs-parent="#accordionFlushExample3">
+                                                                                    <div class="accordion-body">
+                                                                                        {{paso3.procedimiento}}
+                                                                                        <br>
+                                                                                        <br>
+                                                                                        {{paso3.resultado|linebreaks }}    
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                            
+                                                                        {%endfor%}
+                                                                    </div>
+                                                                    <br>
+                                                                    <br>
+                                                                    {{paso2.resultado |linebreaks }}
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    {%endfor%}
+                                                    
+                                                </div>
+                          
+                                    {%else%}
+                                        {{paso.procedimiento |linebreaks}}
+                                    {%endif%}
+                                    <br>
+                                    <br>
+                                    {{paso.resultado |linebreaks }}
+                                </div>
+                            </div>
+                        </div>
+                    {%endfor%}
+                    
+                </div>
             </div>
         </div>
+
+        <!-- Formula -->
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Fórmula Utilizada</div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    
 {%endblock%}
