--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -74,7 +74,7 @@
             <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="{%url "simple"%}">Integración Simple</a></li>
               <li><a class="dropdown-item" href="{%url "doble"%}">Integración Doble</a></li>
-              <li><a class="dropdown-item" href="#">Por Extrapolación</a></li>
+              <li><a class="dropdown-item" href="{%url "extrapolacion"%}">Por Extrapolación</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Documentación</a></li>
             </ul>
