--- a/templates/integracion/view.html
+++ b/templates/integracion/view.html
@@ -99,22 +99,22 @@
                                                 <div class="accordion accordion-flush" id="accordionFlush2Example">
                                                     {%for paso2 in paso.procedimiento2%}
                                                         <div class="accordion-item">
-                                                            <h2 class="accordion-header" id="flush-heading2{{forloop.counter}}">
-                                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse2{{forloop.counter}}" aria-expanded="false" aria-controls="flush-collapse2{{forloop.counter}}">
+                                                            <h2 class="accordion-header" id="flush-heading2{{forloop.counter}}{{forloop.parentloop.counter}}">
+                                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse2{{forloop.counter}}{{forloop.parentloop.counter}}" aria-expanded="false" aria-controls="flush-collapse2{{forloop.counter}}{{forloop.parentloop.counter}}">
                                                                 {{paso2.titulo}}
                                                                 </button>
                                                             </h2>
-                                                            <div id="flush-collapse2{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading2{{forloop.counter}}" data-bs-parent="#accordionFlushExample2">
+                                                            <div id="flush-collapse2{{forloop.counter}}{{forloop.parentloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading2{{forloop.counter}}{{forloop.parentloop.counter}}" data-bs-parent="#accordionFlushExample2">
                                                                 <div class="accordion-body">
                                                                     <div class="accordion accordion-flush" id="accordionFlush3Example">
                                                                         {%for paso3 in paso2.procedimiento%}
                                                                             <div class="accordion-item">
-                                                                                <h2 class="accordion-header" id="flush-heading3{{forloop.counter}}">
-                                                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse3{{forloop.counter}}" aria-expanded="false" aria-controls="flush-collapse3{{forloop.counter}}">
+                                                                                <h2 class="accordion-header" id="flush-heading3{{forloop.counter}}{{forloop.parentloop.counter}}{{forloop.parentloop.parentloop.counter}}">
+                                                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse3{{forloop.counter}}{{forloop.parentloop.counter}}{{forloop.parentloop.parentloop.counter}}" aria-expanded="false" aria-controls="flush-collapse3{{forloop.counter}}{{forloop.parentloop.counter}}{{forloop.parentloop.parentloop.counter}}">
                                                                                     {{paso3.titulo}}
                                                                                     </button>
                                                                                 </h2>
-                                                                                <div id="flush-collapse3{{forloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading3{{forloop.counter}}" data-bs-parent="#accordionFlushExample3">
+                                                                                <div id="flush-collapse3{{forloop.counter}}{{forloop.parentloop.counter}}{{forloop.parentloop.parentloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading3{{forloop.counter}}{{forloop.parentloop.counter}}{{forloop.parentloop.parentloop.counter}}" data-bs-parent="#accordionFlushExample3">
                                                                                     <div class="accordion-body">
                                                                                         {{paso3.procedimiento}}
                                                                                         <br>
