--- a/templates/integracion/view.html
+++ b/templates/integracion/view.html
@@ -62,7 +62,7 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">Tipo</th>
+                        <th scope="col">Error</th>
                         <th scope="col">Valor Numérico</th>
                     </tr>
                 </thead>
@@ -82,7 +82,7 @@
         </div>
 
         <!-- Pasos -->
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" style = "font-size:1.5rem;">
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" style = "font-size:1.2rem;">
             <div style = "padding:10px;">
                 <div class="accordion accordion-flush" id="accordionFlushExample">
 
@@ -117,7 +117,7 @@
                                                                                 <div id="flush-collapse3{{forloop.counter}}{{forloop.parentloop.counter}}{{forloop.parentloop.parentloop.counter}}" class="accordion-collapse collapse" aria-labelledby="flush-heading3{{forloop.counter}}{{forloop.parentloop.counter}}{{forloop.parentloop.parentloop.counter}}" data-bs-parent="#accordionFlushExample3">
                                                                                     <div class="accordion-body">
                                                                                         {{paso3.procedimiento}}
-                                                                                        <br>
+                                                                                        
                                                                                         <br>
                                                                                         {{paso3.resultado|linebreaks }}    
                                                                                     </div>
@@ -126,7 +126,7 @@
                                                                             
                                                                         {%endfor%}
                                                                     </div>
-                                                                    <br>
+                                                                   
                                                                     <br>
                                                                     {{paso2.resultado |linebreaks }}
                                                                 </div>
@@ -139,7 +139,7 @@
                                     {%else%}
                                         {{paso.procedimiento |linebreaks}}
                                     {%endif%}
-                                    <br>
+                                    
                                     <br>
                                     {{paso.resultado |linebreaks }}
                                 </div>
