--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top " style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top " style="background-color: white;">
     <div class="container-fluid">
       <a class="navbar-brand" href="{%url "home"%}">
-        <img src="https://fotos.subefotos.com/ba4f6b89415d5f2d84f38d8f95a5962eo.png" alt="" width="150" class="d-inline-block align-text-top">
+        <img src="https://i.ibb.co/pKHh0bB/ESFMlab.png" alt="" width="150" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -72,6 +72,8 @@
               Integración
             </a>
             <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="{%url "indefinida"%}">Integración Indefinida</a></li>
+              
               <li><a class="dropdown-item" href="{%url "simple"%}">Integración Simple</a></li>
               <li><a class="dropdown-item" href="{%url "doble"%}">Integración Doble</a></li>
               <li><a class="dropdown-item" href="{%url "extrapolacion"%}">Por Extrapolación</a></li>
@@ -90,4 +92,5 @@
         
       </div>
     </div>
+    
   </nav>
