--- a/templates/integracion/doble.html
+++ b/templates/integracion/doble.html
@@ -9,6 +9,11 @@
         var MQ = MathQuill.getInterface(2);
     </script>
     <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/javascript" id="MathJax-script" async
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 {%endblock%}
 
 {%block content%}
@@ -18,10 +23,14 @@
             Esquema de los datos:
             <br>
             - Para los 4 límites numéricos  
-            <img src="https://fotos.subefotos.com/e1c1e64ea99f4fab12bc1371fec40151o.png" alt="" style = "width:200px;">
+            <p style = "font-size:x-large; display:inline;">
+                \( \int_c^d  \int_a^b \\ f(x,y) \\ dx \ dy \)
+            </p> 
             <br>
             - Para límites en función de x (observa que el orden de integración cambia): 
-            <img src="https://fotos.subefotos.com/9daf306be0950696714ea8b9e2ac3104o.png" alt="" style = "width:200px;">
+            <p style = "font-size:x-large; display:inline;">
+                \( \int_c^d \int_{a(x)}^{b(x)} \\ f(x,y) \\ dy \ dx \)
+            </p> 
             <br>
             Si quieres cambiar el orden de integración, invierte las literales en tu función.
             <br>
@@ -30,8 +39,8 @@
         <form action="{%url "submit"%}" method = "POST">
             {%csrf_token%}
             <input type="hidden" value = "doble" name = "tipo">
-            <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación f(x,y) <b> sin los dx, dy</b></label>
-            <div style = "width:100%;">
+            <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación  \(  \ f(x,y) \ \) <b> sin los diferenciales \( dx, dy \) </b></label>
+            <div style = "width:100%; background-color: white;">
                 <span id="math-field" style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
                                                 padding: .5rem 1rem;
                                                 font-size: 1.25rem;
