--- a/templates/integracion/extrapolacion.html
+++ b/templates/integracion/extrapolacion.html
@@ -22,7 +22,7 @@
             {%csrf_token%}
             <input type="hidden" value = "extrapolacion" name = "tipo">
             <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación f(x) <b> sin el dx</b></label>
-            <div style = "width:100%;">
+            <div style = "width:100%; background-color: white;">
                 <span id="math-field" style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
                                                 padding: .5rem 1rem;
                                                 font-size: 1.25rem;
