--- a/templates/integracion/simple.html
+++ b/templates/integracion/simple.html
@@ -1,6 +1,7 @@
 {%extends "base.html"%}
 {%load static%}
 {%block header%}
+    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
     <title> ESFMlab |  Ingresar Ecuación</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.css">`
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -8,27 +9,37 @@
     <script>
         var MQ = MathQuill.getInterface(2);
     </script>
-    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
+    
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/javascript" id="MathJax-script" async
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 {%endblock%}
 
 {%block content%}
+    <h1 style = "padding-bottom:20px;">Integración Simple</h1>
     <div class="mb-3">
-        <h1 style = "padding-bottom:20px;">Integración Simple</h1>
-        <div style = "padding-bottom:10px;">
+        
+        <!-- <div style = "padding-bottom:10px;">
             Esquema de los datos:
-            <img src="https://fotos.subefotos.com/fd29859f380de7d7721b8b6f644d45b7o.png" alt="" style = "width:130px;">
-        </div>
+            <p style = "font-size:x-large; display:inline;">
+                \( \int_a^b \\ f(x) \\ dx \)
+            </p>        
+        </div> -->
         <form action="{%url "submit"%}" method = "POST">
             {%csrf_token%}
+            {%include "buttons.html"%}
             <input type="hidden" value = "simple" name = "tipo">
-            <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación f(x) <b> sin el dx</b></label>
-            <div style = "width:100%;">
-                <span id="math-field" style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
+            <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación  \( \\ f(x) \\ \)  <b> sin el diferencial \( \\ dx\) </b></label>
+            <div style = "width:100%; background-color: white;">
+                <span  id="math-field" focus style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
                                                 padding: .5rem 1rem;
                                                 font-size: 1.25rem;
-                                                border-radius: .3rem; line-height: inherit;"></span>
+                                                border-radius: .3rem; line-height: inherit;"> </span> 
                 <input type="hidden" id= "latexvalue" value = "" style = "width:100%;" id = "math-field" class="form-control-lg" id="exampleFormControlInput1" placeholder="Ecuación con operadores de Python" name = "eq">
             </div>
+            
             <div class="container" style = "margin-top:30px;">
                 <div class="row justify-content-center">
                     <div class="col-auto" style = "padding:20px;">
@@ -74,9 +85,16 @@
             handlers: {
                 edit: function() { // useful event handlers
                 inputSpan.value =  mathField.latex(); 
+                mathFieldSpan.focus();
                 }
             }
             });
+            mathField.focus();
+            function input(str) {
+                mathField.cmd(str);
+                mathField.focus();
+                }
+            
         </script>
     </div>
 {%endblock%}
