--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
             <p class = "lead"></p>
             <hr class="my-2">
             <p>
-                Es una aplicación web desarrollada por estudiantes de la Escuela Superior de Física y Matemáticas del IPN sin fines de lucro.
+                Es una aplicación web desarrollada por estudiantes sin fines de lucro.
                 Tiene como objetivo presentar principales métodos numéricos mediante el cómputo de ejercicios ingresados por los usuarios. 
             </p>
             <p>
