--- a/templates/integracion/simple.html
+++ b/templates/integracion/simple.html
@@ -31,7 +31,7 @@
             {%csrf_token%}
             {%include "buttons.html"%}
             <input type="hidden" value = "simple" name = "tipo">
-            <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación  \( \\ f(x) \\ \)  <b> sin el diferencial \( \\ dx\) </b></label>
+            <label for="exampleFormControlInput1" class="form-label">Ingresa la función  \( \\ f(x) \\ \)  <b> sin el diferencial \( \\ dx\) </b></label>
             <div style = "width:100%; background-color: white;">
                 <span  id="math-field" focus style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
                                                 padding: .5rem 1rem;
