--- a/templates/integracion/doble.html
+++ b/templates/integracion/doble.html
@@ -2,13 +2,14 @@
 {%load static%}
 {%block header%}
     <title> ESFMlab |  Ingresar Ecuación</title>
+    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.css">`
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.js" type="text/javascript"></script>
     <script>
         var MQ = MathQuill.getInterface(2);
     </script>
-    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
+    
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" id="MathJax-script" async
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
@@ -38,8 +39,9 @@
         </div>
         <form action="{%url "submit"%}" method = "POST">
             {%csrf_token%}
+            {%include "buttons.html"%}
             <input type="hidden" value = "doble" name = "tipo">
-            <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación  \(  \ f(x,y) \ \) <b> sin los diferenciales \( dx, dy \) </b></label>
+            <label for="exampleFormControlInput1" class="form-label">Ingresa la función  \(  \ f(x,y) \ \) <b> sin los diferenciales \( dx, dy \) </b></label>
             <div style = "width:100%; background-color: white;">
                 <span id="math-field" style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
                                                 padding: .5rem 1rem;
@@ -121,6 +123,11 @@
                 }
             }
             });
+            mathField.focus();
+            function input(str) {
+                mathField.cmd(str);
+                mathField.focus();
+                }
         </script>
     </div>
 {%endblock%}
