--- a/templates/integracion/extrapolacion.html
+++ b/templates/integracion/extrapolacion.html
@@ -1,6 +1,7 @@
 {%extends "base.html"%}
 {%load static%}
 {%block header%}
+    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
     <title> ESFMlab |  Ingresar Ecuación</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.css">`
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -8,20 +9,26 @@
     <script>
         var MQ = MathQuill.getInterface(2);
     </script>
-    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/javascript" id="MathJax-script" async
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
 {%endblock%}
 
 {%block content%}
     <div class="mb-3">
         <h1 style = "padding-bottom:20px;">Integración Por Extrapolación</h1>
-        <div style = "padding-bottom:10px;">
+        <!-- <div style = "padding-bottom:10px;">
             Esquema de los datos:
             <img src="https://fotos.subefotos.com/fd29859f380de7d7721b8b6f644d45b7o.png" alt="" style = "width:130px;">
-        </div>
+        </div> -->
         <form action="{%url "submit"%}" method = "POST">
             {%csrf_token%}
+            {%include "buttons.html"%}
             <input type="hidden" value = "extrapolacion" name = "tipo">
-            <label for="exampleFormControlInput1" class="form-label">Ingresa la ecuación f(x) <b> sin el dx</b></label>
+            <label for="exampleFormControlInput1" class="form-label">Ingresa la función f(x) <b> sin el dx</b></label>
             <div style = "width:100%; background-color: white;">
                 <span id="math-field" style =  "width:100%; min-height: calc(1.5em + 1rem + 2px);
                                                 padding: .5rem 1rem;
@@ -77,6 +84,11 @@
                 }
             }
             });
+            mathField.focus();
+            function input(str) {
+                mathField.cmd(str);
+                mathField.focus();
+                }
         </script>
     </div>
 {%endblock%}
