--- a/templates/integracion/view.html
+++ b/templates/integracion/view.html
@@ -1,7 +1,8 @@
 
 {%extends "base.html"%}
-
+{%load static%}
 {%block header%}
+    <link rel="shortcut icon" type = "image/png" href="{% static 'favicon.ico' %}">
     <title>SymboESFM | Resultado</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" id="MathJax-script" async
